tests/xy_c_compile_resources/errors/guards.xy
import xy.ctti;

func guards1(a: Int, b: Int) -> Int
>> a > b
{
    return 0;
}

func guards2(a: Int, b: pseudo Any) -> Int
>> sizeof(a) > sizeof(b)
{
    return 0;
}

func guards3(a: pseudo Any, b: pseudo Any) -> Int
>>  %a \assumeCompatibleTypes %b
{
    return 0;
}

struct ErrorCode {
    code: Int;
}

func to(ec: ErrorCode, :Bool) -> Bool {
    return ec.code != 0;
}

func guards4(a: Int, b: Int) -> (c: Int) | ErrorCode
>> a < b
<< b > c
{
    return 0;
}

func test(a: Int, b: Int) -> Int {
    res : mut = 0;
    res += guards1(a, b);
    res += guards2(a, b);
    res += guards3(res, b);
    res += guards4(a, res);
    res += guards4(
        guards2(guards4(a, b), b),
        guards3(res, res)
    );
    return res;
}